tweak syntax handling shortcode to use common generic-table partial

--- a/doc/user/layouts/partials/yaml-tables/generic-table.html
+++ b/doc/user/layouts/partials/yaml-tables/generic-table.html
@@ -3,7 +3,7 @@
 <thead>
 <tr>
 {{ range .columns }}
-<th>{{ .column }}</th>
+<th>{{ .header | default .column }}</th>
 {{ $fields = $fields | append (dict "field" .column) }}
 {{ end }}
 </tr>
