--- a/doc/user/assets/sass/_layout.scss
+++ b/doc/user/assets/sass/_layout.scss
@@ -10,10 +10,10 @@
 .content-wrapper {
     display: flex;
     justify-content: center;
-    padding-top: calc(var(--nav-height) + var(--small));
+    padding-top: var(--nav-height);
 
     @media(max-width: 800px) {
-        padding-top: calc(var(--nav-height) + var(--small));
+        padding-top: calc(var(--nav-height) + var(--xx-small));
     }
 
     @media(max-width: 380px) {
@@ -139,7 +139,7 @@ table.inline-headings {
         z-index: 100;
         top: var(--nav-height);
         left: 0;
-        height: calc(120vh - var(--nav-height));
+        height: calc(100vh - var(--nav-height));
         border-right: 1px solid var(--divider-light);
         transform: translateX(-100%);
         transition: all .2s ease-out;
@@ -193,7 +193,6 @@ table.inline-headings {
     @media(max-width: 850px) {
         padding-bottom: var(--large);
         height: calc(100vh - var(--nav-height));
-        margin-top: 80px;
     }
 
     a {
