Address feedback, rewrite request forwarding
The request forwarding uses raw primitives instead of higher-level APIs to
gain more control over what's happening under the hood. I also haven't
observed connections getting stuck with this approach.

Signed-off-by: Moritz Hoffmann <mh@materialize.com>

--- a/src/environmentd/templates/clusters.html
+++ b/src/environmentd/templates/clusters.html
@@ -32,7 +32,7 @@
             <th>Cluster ID</th>
             <th>Replica ID</th>
             <th>Processes</th>
-            <th>Links</th>
+            <th>Endpoints</th>
         </tr>
     </thead>
     <tbody>
