docs: tweak reference pages

--- a/doc/user/layouts/shortcodes/include-headless.html
+++ b/doc/user/layouts/shortcodes/include-headless.html
@@ -1,6 +1,6 @@
 {{ with .Get 0 }}
   {{ with $.Page.GetPage . }}
-    {{- .RenderShortcodes -}}
+{{ .RenderShortcodes }}
   {{ else }}
     {{ errorf "The %q shortcode was unable to find %q. See %s" $.Name . $.Position }}
   {{ end }}
